padding issue on insta section. pushing content over on mobile

--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -366,7 +366,7 @@ body {
   .instagram {
     background: #262626;
     height: auto;
-    padding: 2rem 1rem 3rem;
+    padding: 2rem 0 3rem;
     box-shadow: 0px 2px 5px hsl(0, 0, 0.5);
     .title {
       text-align: center;
